linked with app icon

--- a/Public/index.html
+++ b/Public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="BlueStock IPO Platform - Discover and invest in upcoming IPOs"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/android app icon(1).png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
